--- a/02/students-list-app/student-manager-angular/src/app/create-student/create-student.component.html
+++ b/02/students-list-app/student-manager-angular/src/app/create-student/create-student.component.html
@@ -11,5 +11,17 @@
     <input class="form-control" type="email" #email>
   </div>
 
+  <div *ngIf="isValidationFieldRequired" class="alert alert-danger" role="alert">
+    Jedno z pól - imie i nazwisko lub email studenta nie jest wypełniony!
+  </div>
+
+  <div *ngIf="isValidationEmailIncorrect" class="alert alert-danger" role="alert">
+    Adres email nie zawiera znaku @
+  </div>
+
+  <div *ngIf="isSuccess" class="alert alert-success" role="alert">
+    Wysłanie studenta na serwer zakończone sukcesem (wysłano żądanie POST)!
+  </div>
+
   <button (click)="addStudent(name.value, email.value)" class="btn btn-outline-success">Zapisz</button>
 </div>
