--- a/02/students-list-app/student-manager-angular/src/app/students-list/students-list.component.html
+++ b/02/students-list-app/student-manager-angular/src/app/students-list/students-list.component.html
@@ -1,5 +1,12 @@
 <h3>Lista studentów</h3>
 
+<div *ngIf="isLoading" class="spinner-border text-success" role="status">
+</div>
+
+<div *ngIf="isStudentDeleted" class="alert alert-danger" role="alert">
+    {{deletedStudentText}}
+</div>
+
 <table class="table table-hover">
   <thead>
     <tr>
@@ -10,12 +17,14 @@
     </tr>
   </thead>
   <tbody>
-    <tr [ngClass]="{'table-primary':x.id == 3, 'table-success': x.id > 7}" 
-        *ngFor="let x of students">
-      <td>{{x.id}}</td>
-      <td>{{x.name | uppercase}}</td>
-      <td><a *ngIf="x.id > 5" href="mailto:{{x.email}}">{{x.email | lowercase}}</a></td>
-      <td></td>
+    <tr [ngClass]="{'table-primary':student.id == 3, 'table-success': student.id > 7}" 
+        *ngFor="let student of students">
+      <td>{{student.id}}</td>
+      <td>{{student.name | uppercase}}</td>
+      <td><a *ngIf="student.id > 5" href="mailto:{{student.email}}">{{student.email | lowercase}}</a></td>
+      <td>
+        <button (click)="deleteStudent(student)" class="btn btn-outline-danger btn-font-bold">Usuń</button>
+      </td>
     </tr>
   </tbody>
 </table>
